<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@drawable/herba"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_tienda_titulo"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:textColor="#ffffff" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp" android:textSize="26dp"/>

    <LinearLayout
            android:background="@drawable/fusta"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_tienda_fichajes"
                android:id="@+id/btnFichajes"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_tienda_objetos"
                android:id="@+id/btnObjetos"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_tienda_otros"
                android:id="@+id/btnOtros"/>
    </LinearLayout>

</RelativeLayout>