<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_menu_principal_jugar"
            android:id="@+id/btnJugar"
            android:layout_alignEnd="@+id/btnConfigurar"
            android:layout_alignStart="@+id/btnConfigurar"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menu_principal_configurar"
                android:id="@+id/btnConfigurar"
                android:layout_below="@+id/btnTienda"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menu_principal_tienda"
                android:id="@+id/btnTienda"
                android:layout_below="@+id/btnJugar"
                android:layout_alignEnd="@+id/btnConfigurar"
                android:layout_alignStart="@+id/btnConfigurar"/>
    </RelativeLayout>

</RelativeLayout>