<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/herba"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

        <TextView
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_tiendafichajes_titulo"
                android:id="@+id/textView"
                android:textColor="#ffffff"
                android:textSize="26dp"
                android:gravity="center"/>

    <LinearLayout
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:text="@string/activity_tiendafichajes_rol"
                android:id="@+id/textView2"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Atacante"
                android:id="@+id/radioButton" android:checked="false"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Defensa"
                android:id="@+id/radioButton2" android:checked="false"/>
    </LinearLayout>
    <ListView
            android:layout_marginTop="24dp"
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    </ListView>

    <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_tiendafichajes_sinjugadores" />

</LinearLayout> 