<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/herba"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/activity_tiendaobjetos_titulo"
            android:id="@+id/textView"
            android:textColor="#ffffff"
            android:textSize="26dp"
            android:gravity="center"/>

    <LinearLayout
            android:background="@drawable/fusta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:orientation="vertical" >

        <LinearLayout
                android:orientation="horizontal"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:layout_marginRight="20dp"
                    android:textColor="#ffffff"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:text="@string/activity_tiendaobjetos_nombre"
                    android:id="@+id/textView2"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tiendaobjetos_edtNombre"
                    android:layout_weight="0.65"/>

        </LinearLayout>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/activity_tiendaobjetos_vertodos"
            android:textColor="#ffffff"
            android:textSize="17dp"
            android:textStyle="bold"
            android:background="@drawable/botofusta"
            android:onClick="onButtonClicked"
            android:id="@+id/todos"/>

    <ListView
            android:id="@+id/listaObjetos"
            android:choiceMode="singleChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    </ListView>

    <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:textSize="17dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/activity_tiendaobjetos_sinobjetos" />

</LinearLayout> 