<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/selector_listitem"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" >

    <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/jugador" >
    </ImageView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:textColor="#ffffff"
                    android:text="@string/activity_tiendafichajes_nombre"
                    android:textSize="17dp"
                    android:id="@+id/textView"/>
            <TextView
                    android:id="@+id/txtNombreJugador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:text="@+id/TextView01"
                    >
            </TextView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:textColor="#ffffff"
                    android:textSize="17dp"
                    android:text="@string/activity_tiendafichajes_rol"
                    android:id="@+id/textView"/>
            <TextView
                    android:id="@+id/txtNombreRol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:text="@+id/TextView01"
                    >
            </TextView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:textColor="#ffffff"
                    android:textSize="17dp"
                    android:text="@string/activity_tiendafichajes_equipo"
                    android:id="@+id/textView"/>
            <TextView
                    android:id="@+id/txtNombreEquipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:text="@+id/TextView01"
                    >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout> 